<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:contentPadding="16dp"
    app:cardBackgroundColor="@color/purple_100"
    app:strokeWidth="1dp"
    app:strokeColor="@color/stroke_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
        android:id="@+id/tvContentOwner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="5"
        tools:text="Berkhan" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/teal_700"
            tools:text="Content Lorem impsum Lorem impsum Lorem impsum Lorem impsum Lorem impsum Lorem impsum Lorem impsum Lorem impsum Lorem impsum Lorem impsum"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:weightSum="6"
            android:gravity="bottom">

            <TextView
                android:id="@+id/tvLastModifiedDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_updated" />

            <TextView
                android:id="@+id/tvLastModifiedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                tools:text="Berkhan" />

            <ImageButton
                android:id="@+id/ibContentDelete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_baseline_delete_outline_24"
                android:contentDescription="@string/delete_content"
                android:layout_weight="0.5"/>

            <ImageButton
                android:id="@+id/ibContentEdit"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_baseline_edit_24"
                android:contentDescription="@string/edit_content"
                android:layout_weight="0.5"/>
        </LinearLayout>


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>
